--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 h2 {
   color: $primary-font-gray;
-  font-family: "Parisienne", cursive;
+  font-family: "Great Vibes", cursive;
   font-size: 5rem;
   font-weight: 100;
   @include for-size(phone-only) {
