--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,19 @@ body {
   100% {
     transform: rotate(0deg); } }
 
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0; }
+  50% {
+    transform: translateY(-10%); }
+  100% {
+    transform: translateY(0%);
+    opacity: 1; } }
+
 h2 {
   color: #3b3a41;
-  font-family: "Parisienne", cursive;
+  font-family: "Great Vibes", cursive;
   font-size: 5rem;
   font-weight: 100; }
   @media (max-width: 599px) {
@@ -190,8 +200,8 @@ h4 {
   opacity: 0; }
 
 .header > figure {
-  animation: imageAnimation 30s linear infinite 0s;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   background-size: cover;
   background-position: center center;
   color: transparent;
@@ -202,26 +212,84 @@ h4 {
   opacity: 0;
   position: absolute;
   z-index: 0;
-  filter: brightness(85%); }
+  filter: brightness(90%); }
 
 .header > figure:nth-child(1) {
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5320-min.jpg"); }
 
 .header > figure:nth-child(2) {
-  animation-delay: 6s;
+  transition: opacity 1s ease;
   background-image: url("../img/header-min.jpg"); }
 
 .header > figure:nth-child(3) {
-  animation-delay: 12s;
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5564-min.jpg"); }
 
 .header > figure:nth-child(4) {
-  animation-delay: 18s;
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5759-min.jpg"); }
 
 .header > figure:nth-child(5) {
-  animation-delay: 24s;
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5433-min.jpg"); }
+
+.slider__button--next {
+  position: absolute;
+  content: "";
+  top: 50%;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  z-index: 2999;
+  background-color: #fff0f6;
+  border: none;
+  cursor: pointer;
+  font-size: 2rem;
+  color: #3b3a41;
+  transform: translateY(-50%);
+  transition: all 0.5s ease; }
+  .slider__button--next:hover, .slider__button--next:active {
+    background-color: #fcc2d7; }
+
+.slider__button--prev {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  z-index: 2999;
+  cursor: pointer;
+  background-color: #fff0f6;
+  font-size: 2rem;
+  color: #3b3a41;
+  transition: all 0.5s ease;
+  transition: all 0.5s ease; }
+  .slider__button--prev:hover, .slider__button--prev:active {
+    background-color: #fcc2d7; }
+
+.slider__button--container {
+  bottom: 20px;
+  left: 50%;
+  position: absolute;
+  transform: translatex(-50%);
+  display: flex;
+  gap: 0.5rem; }
+
+.slider__button {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: whitesmoke;
+  z-index: 4000;
+  border: none;
+  cursor: pointer; }
+  .slider__button:focus, .slider__button:active, .slider__button:target {
+    background-color: #fcc2d7; }
 
 .header {
   max-width: 100%;
@@ -230,34 +298,43 @@ h4 {
 
 .title {
   color: #f6f6f6;
-  font-family: "Parisienne", cursive;
+  font-family: "Great Vibes", cursive;
   position: absolute;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%); }
-  .title p:nth-child(1) {
-    text-transform: uppercase;
-    font-size: 1.8rem; }
   .title__mainheading {
-    font-size: 8rem;
-    padding: 0 1rem; }
+    font-size: 8.5rem;
+    padding: 2rem 1rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+    animation: slideUp 1.5s ease-in;
+    animation-fill-mode: backwards; }
     @media (max-width: 900px) {
       .title__mainheading {
         font-size: 6rem; } }
     @media (max-width: 599px) {
       .title__mainheading {
-        font-size: 5rem; } }
+        font-size: 3.5rem;
+        padding: 2rem 0; } }
   .title__subheading {
-    font-size: 2.5rem;
+    font-size: 1.8rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     font-family: "Cormorant", serif;
-    padding: 1rem 1rem; }
+    padding: 1rem 1rem;
+    text-transform: uppercase;
+    animation: slideUp 2s ease-in;
+    animation-fill-mode: backwards;
+    animation-delay: 1s; }
     @media (max-width: 599px) {
       .title__subheading {
-        font-size: 2rem; } }
+        font-size: 1.3rem; } }
+  .title hr {
+    height: 2px;
+    background-color: white; }
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0 4rem 0 4rem;
   font-weight: 400;
@@ -269,7 +346,8 @@ h4 {
   @media (max-width: 1200px) {
     .nav {
       background-color: #fff0f6;
-      border: none; } }
+      border: none;
+      justify-content: space-between; } }
   .nav__link {
     display: flex;
     flex-direction: row; }
@@ -297,7 +375,8 @@ h4 {
       .nav__link--menu span {
         color: #f783ac;
         margin-left: 3rem;
-        font-size: 1rem; }
+        font-size: 1rem;
+        display: none; }
         @media (max-width: 1200px) {
           .nav__link--menu span {
             display: none; } }
@@ -476,7 +555,7 @@ h4 {
   margin: 0 auto; }
 
 .wedparty__body {
-  height: 800px;
+  height: 600px;
   position: relative;
   overflow: hidden; }
   @media (max-width: 599px) {
@@ -484,7 +563,7 @@ h4 {
       height: 900px; } }
   .wedparty__body--card {
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 0;
     width: 100%;
     transition: transform 0.5s;
@@ -497,8 +576,8 @@ h4 {
         flex-direction: column;
         gap: 1.5rem; } }
     .wedparty__body--card img {
-      max-width: 300px;
-      max-height: 300px;
+      width: 300px;
+      height: 300px;
       border-radius: 50%;
       margin: 1rem; }
     .wedparty__body--card h3 {
@@ -534,7 +613,6 @@ fieldset {
 input[type="text"],
 input[type="email"],
 input[type="number"] {
-  display: block;
   font-family: inherit;
   font-size: inherit;
   width: 100%;
@@ -560,6 +638,9 @@ input[type="text"]:focus::placeholder,
 input[type="email"]:focus::placeholder,
 input[type="number"]:focus::placeholder {
   font-weight: 700; }
+
+.guest {
+  display: none; }
 
 .story__container {
   max-width: 1240px;
