--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -52,3 +52,17 @@
     transform: rotate(0deg);
   }
 }
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(-10%);
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
