--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,6 +1,6 @@
 .header > figure {
-  animation: imageAnimation 30s linear infinite 0s;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   background-size: cover;
   background-position: center center;
   color: transparent;
@@ -11,25 +11,92 @@
   opacity: 0;
   position: absolute;
   z-index: 0;
-  filter: brightness(85%);
+  filter: brightness(90%);
 }
 
 .header > figure:nth-child(1) {
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5320-min.jpg");
 }
 .header > figure:nth-child(2) {
-  animation-delay: 6s;
+  transition: opacity 1s ease;
   background-image: url("../img/header-min.jpg");
 }
 .header > figure:nth-child(3) {
-  animation-delay: 12s;
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5564-min.jpg");
 }
 .header > figure:nth-child(4) {
-  animation-delay: 18s;
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5759-min.jpg");
 }
 .header > figure:nth-child(5) {
-  animation-delay: 24s;
+  transition: opacity 1s ease;
   background-image: url("../img/DX9A5433-min.jpg");
+}
+
+.slider__button--next {
+  position: absolute;
+  content: "";
+  top: 50%;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  z-index: 2999;
+  background-color: $primary-color-light;
+  border: none;
+  cursor: pointer;
+  font-size: 2rem;
+  color: $primary-font-gray;
+  transform: translateY(-50%);
+  transition: all 0.5s ease;
+  &:hover,
+  &:active {
+    background-color: $primary-color;
+  }
+}
+.slider__button--prev {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  z-index: 2999;
+  cursor: pointer;
+  background-color: $primary-color-light;
+  font-size: 2rem;
+  color: $primary-font-gray;
+  transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  &:hover,
+  &:active {
+    background-color: $primary-color;
+  }
+}
+.slider__button--container {
+  bottom: 20px;
+  left: 50%;
+  position: absolute;
+  transform: translatex(-50%);
+  display: flex;
+  gap: 0.5rem;
+}
+.slider__button {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: whitesmoke;
+  z-index: 4000;
+  border: none;
+  cursor: pointer;
+
+  &:focus,
+  &:active,
+  &:target {
+    background-color: $primary-color;
+  }
 }
