--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0 4rem 0 4rem;
   font-weight: 400;
@@ -12,6 +12,7 @@
   @include for-size(desktop-down) {
     background-color: $primary-color-light;
     border: none;
+    justify-content: space-between;
   }
   &__link {
     display: flex;
@@ -44,6 +45,7 @@
         color: $primary-color-dark;
         margin-left: 3rem;
         font-size: 1rem;
+        display: none;
 
         @include for-size(desktop-down) {
           display: none;
