--- a/sass/layout/_wedparty.scss
+++ b/sass/layout/_wedparty.scss
@@ -47,7 +47,7 @@
   margin: 0 auto;
 }
 .wedparty__body {
-  height: 800px;
+  height: 600px;
   position: relative;
   overflow: hidden;
   @include for-size(phone-only) {
@@ -56,7 +56,7 @@
 
   &--card {
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 0;
     width: 100%;
     transition: transform 0.5s;
@@ -69,8 +69,8 @@
       gap: 1.5rem;
     }
     & img {
-      max-width: 300px;
-      max-height: 300px;
+      width: 300px;
+      height: 300px;
       border-radius: 50%;
       margin: 1rem;
     }
